--- a/config/database.yml
+++ b/config/database.yml
@@ -81,6 +81,8 @@ test:
 #
 production:
   <<: *default
-  database: watch_list_7_production
-  username: watch_list_7
-  password: <%= ENV["WATCH_LIST_7_DATABASE_PASSWORD"] %>
+  host: <%= ENV['DB_HOST'] %>
+  port: 5432
+  database: <%= ENV['DB_DATABASE'] %>
+  username: <%= ENV['DB_USERNAME'] %>
+  password: <%= ENV['DB_PASSWORD'] %>
